# ToDo-App

./: README.md  pyproject.toml
todo_app/: __init__.py  __main__.py  utils.py
todo_app/app/: __init__.py  app.py  filter_status.py  task_control.py  task_event.py  todo_app.py
todo_app/app/ui/: __init__.py  task_ui.py  todo_app_ui.py
todo_app/todo_logic/: __init__.py  task.py  task_dict.py  task_manager.py
todo_app/ui/: __init__.py  app.py  task_event.py  task_ui.py  todo_app.py
